--- a/index.html
+++ b/index.html
@@ -278,12 +278,13 @@
 if (pendente) {
   let pendenteContent = `
     <div style="text-align: center; margin-bottom: 10px;">
-      <strong>📢 Atenção! Envio de Documentos Pendentes</strong>
-    </div>
-    <div style="text-align: left; margin-bottom: 30px;">
-      Para dar continuidade ao seu processo, encaminhe os documentos pendentes conforme as instruções abaixo:
-    </div>
-    
+  <strong>📢 Atenção! Envio de Documentos Pendentes</strong>
+</div>
+
+<div style="text-align: left; margin-bottom: 30px;">
+  Para dar continuidade ao seu processo, encaminhe os documentos pendentes conforme as instruções abaixo:
+</div>
+
 <div style="text-align: left; margin-bottom: 30px;">
   <strong>📧 Documentos que podem ser enviados por e-mail:</strong> <br>
   Enviar para: <strong>documentos@apipmcbdf.com.br</strong><br>
@@ -293,7 +294,8 @@ if (pendente) {
   ✅ Ficha Financeira (preferencialmente por e-mail, para processamento prioritário)<br>
   ✅ Comprovante de residência<br>
   ✅ Documento de identidade (RG ou CNH)<br>
-  <strong>⚠️ Importante:</strong> Certifique-se de que os arquivos estejam legíveis e de alta qualidade.
+  <strong>⚠️ Importante:</strong> Certifique-se de que os arquivos estejam legíveis e de alta qualidade.<br>
+  <strong>📎 Observação:</strong> Todos os arquivos devem ser enviados exclusivamente em formato <strong>PDF</strong>. Outros formatos não serão aceitos.
 </div>
 
 <div style="text-align: left; margin-top: 20px; margin-bottom: 10px;">
@@ -304,33 +306,34 @@ if (pendente) {
   🔹 Declaração de Inexistência de Ação<br>
 </div>
 
-    <div style="text-align: left; margin-bottom: 30px;">
-      <strong>📍 Opções para envio físico:</strong><br>
-      <strong>Via correio:</strong> <br>
-      Rua Evaristo da Veiga, 55, 10º andar<br>
-      CEP: 20031-040<br>
-      <strong>Pessoalmente:</strong> <br>
-      No mesmo endereço, das 09h às 13h.
-    </div>
+<div style="text-align: left; margin-bottom: 30px;">
+  <strong>📍 Opções para envio físico:</strong><br>
+  <strong>Via correio:</strong> <br>
+  Rua Evaristo da Veiga, 55, 10º andar<br>
+  CEP: 20031-040<br>
+  <strong>Pessoalmente:</strong> <br>
+  No mesmo endereço, das 09h às 13h.
+</div>
 
-    <div style="text-align: left; margin-bottom: 30px;">
-      <strong>🔹 Prioridade no processamento da Ficha Financeira:</strong><br>
-      Para maior agilidade no trâmite, recomendamos que a <strong>Ficha Financeira</strong> seja enviada preferencialmente por e-mail. Documentos enviados por e-mail serão processados com prioridade, pois já estarão prontos para encaminhamento ao escritório Silveira e Cruz. Já os documentos entregues fisicamente passarão por uma etapa adicional de digitalização antes do envio.
-    </div>
+<div style="text-align: left; margin-bottom: 30px;">
+  <strong>🔹 Prioridade no processamento da Ficha Financeira:</strong><br>
+  Para maior agilidade no trâmite, recomendamos que a <strong>Ficha Financeira</strong> seja enviada preferencialmente por e-mail. Documentos enviados por e-mail serão processados com prioridade, pois já estarão prontos para encaminhamento ao escritório Silveira e Cruz. Já os documentos entregues fisicamente passarão por uma etapa adicional de digitalização antes do envio.
+</div>
 
-    <div style="text-align: left; margin-bottom: 10px;">
-      <strong>❓ Dúvidas? Entre em contato:</strong>
-    </div>
-    
-    <div style="text-align: left; margin-bottom: 10px;">
-      <strong>📞 Telefones:</strong> (21) 2532-6974 / 2220-6154 / 2544-2607<br>
-      <strong>💬 WhatsApp:</strong> (21) 98499-7413<br>
-      <strong>📧 E-mail:</strong> atendimento@apipmcbdf.com.br
-    </div>
+<div style="text-align: left; margin-bottom: 10px;">
+  <strong>❓ Dúvidas? Entre em contato:</strong>
+</div>
 
-    <div style="text-align: center;">
-      Agradecemos sua atenção!
-    </div>
+<div style="text-align: left; margin-bottom: 10px;">
+  <strong>📞 Telefones:</strong> (21) 2532-6974 / 2220-6154 / 2544-2607<br>
+  <strong>💬 WhatsApp:</strong> (21) 98499-7413<br>
+  <strong>📧 E-mail:</strong> atendimento@apipmcbdf.com.br
+</div>
+
+<div style="text-align: center;">
+  Agradecemos sua atenção!
+</div>
+
   `;
   html += createCard("", pendenteContent, "center", "left");
 }
