--- a/index.html
+++ b/index.html
@@ -295,7 +295,9 @@ if (pendente) {
   ✅ Comprovante de residência<br>
   ✅ Documento de identidade (RG ou CNH)<br>
   <strong>⚠️ Importante:</strong> Certifique-se de que os arquivos estejam legíveis e de alta qualidade.<br>
-  <strong>📎 Observação:</strong> Todos os arquivos devem ser enviados exclusivamente em formato <strong>PDF</strong>. Outros formatos não serão aceitos.
+  <strong>⚠️ NÃO ACEITAMOS PRINTS DE TELA (SCREENSHOT)</strong><br>
+  <strong>⚠️ CUIDADO PARA NÃO ENVIAR COMPROVANTES DE RESIDENCIA PROTEGIDOS POR SENHA.</strong><br>
+  <strong>⚠️ Observação:</strong> Todos os arquivos devem ser enviados exclusivamente em formato <strong>PDF</strong>. Outros formatos não serão aceitos.
 </div>
 
 <div style="text-align: left; margin-top: 20px; margin-bottom: 10px;">
