--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 <body>
   <h1>Estamos trabalhando nisso!</h1>
   <p>Esta página está em construção. Volte em breve 🛠️</p>
-  <img src="https://i.imgur.com/dYcYQ7E.png" alt="Gatinho em construção" />
+  <img src="https://png.pngtree.com/png-clipart/20240830/original/pngtree-cat-operating-laptop-png-image_15881120.png" alt="Gatinho em construção" />
 </body>
 </html>
